--- a/doc/css/my.css
+++ b/doc/css/my.css
@@ -1,8 +1,18 @@
+h2 {
+	font-size: 28px;
+}
+
 .commit {
 	font-size: 10px;
 	color: #66F;
 	vertical-align: top;
 }
-h2 {
-	font-size: 28px;
+
+.infobox {
+	//border-left: 5px solid #eeeeee;
+	padding-left: 25px;
+	margin-left: 30px;
+	background-image: url(../img/icon-infobox.png);
+	background-repeat: no-repeat;
+	background-position: 5px top;
 }
